update .gitignore file for the docker data folder

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 /CSharpLevel2/obj
 /WebDriverAdvancedTests/obj
 /WebDriverAdvancedTests/bin/Debug/netcoreapp3.1
+/WebDriverAdvancedTests/data
