--- a/WinAppDriverTests/WinAppDriverTests.csproj
+++ b/WinAppDriverTests/WinAppDriverTests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="ReportPortal.VSTest.TestLogger" Version="3.0.1" />
     <!--<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />-->
   </ItemGroup>
 
